[tool.poetry]
name = "pysimbu"
version = "0.1.0"
description = ""
authors = ["Wade Huang <fastwade11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
anndata = "^0.10.5"
hdf5plugin = "^4.4.0"
jupyter = "^1.0.0"
scanpy = "^1.10.1"
scikit-learn = "^1.4.2"
rich = "^13.7.1"
joblib = "^1.4.0"
ruff = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120