[tool.poetry]
name = "pysimbu"
version = "0.1.3"
description = ""
authors = ["Wade Huang <fastwade11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=2.2.1"
anndata = ">=0.10.5"
scanpy = "^1.10.1"
joblib = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120